fixed search form jumping in IE8, fixes #28

--- a/styles.css
+++ b/styles.css
@@ -404,6 +404,7 @@ label {
   display: inline-block;
   font-size: 12px;
   -webkit-font-smoothing: subpixel-antialiased;   
+  zoom: 1;
   }
 
 #site_footer li a {
